<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="permlab_accessAdServicesTopics">access AdServices Topics API</string>
    <string name="permdesc_accessAdServicesTopics">Allows an application to access AdServices Topics API.</string>
    <string name="permlab_accessAdServicesAttribution">access AdServices Attribution APIs</string>
    <string name="permdesc_accessAdServicesAttribution">Allows an application to access AdServices Attribution APIs.</string>
    <string name="permlab_accessAdServicesCustomAudience">access AdServices Custom Audience API</string>
    <string name="permdesc_accessAdServicesCustomAudience">Allows an application to access AdServices Custom Audience API.</string>
    <string name="permlab_accessAdServicesAdId">Access to AdId API</string>
    <string name="permdesc_accessAdServicesAdId">Allows an application to access AdId API.</string>
    <string name="permlab_accessAdServicesConsent">access AdServices Consent API</string>
    <string name="permdesc_accessAdServicesConsent">Allows an application to access AdServices Consent API.</string>
    <string name="permlab_adServicesAccessAdId">Access to Ad ID API</string>
    <string name="permdesc_adServicesAccessAdId">Allows an application to access Ad ID API.</string>
    <string name="permlab_adServicesAccessAppSetId">Access to App Set ID API</string>
    <string name="permdesc_adServicesAccessAppSetId">Allows an application to access App Set ID API.</string>
    <string name="permlab_adServicesAccessConsentService">Access to Consent Service API</string>
    <string name="permdesc_adServicesAccessConsentService">Allows an application to access Consent Service API.</string>
    <string name="permlab_modifyAdServicesState">Access to AdService’s enablement state modification API</string>
    <string name="permdesc_modifyAdServicesState">Allows an application to access AdService’s enablement state modification API.</string>
    <string name="permlab_accessAdServicesState">Access to AdService’s enablement state API</string>
    <string name="permdesc_accessAdServicesState">Allows an application to access AdService’s enablement state API.</string>
    <string name="permlab_accessAdServicesManager">Access to AdServicesManager’s APIs</string>
    <string name="permdesc_accessAdServicesManager">Allows an application to access AdServicesManager’s APIs.</string>
    <string name="app_label">Android System</string>
    <string name="notificationUI_notification_title_eu">Join Android’s ads privacy beta</string>
    <string name="notificationUI_notification_content_eu">Android is exploring more private ways for apps to show you ads</string>
    <string name="notificationUI_notification_cta_eu">Learn more</string>
    <string name="notificationUI_header_title_eu">Android’s ads privacy beta</string>
    <string name="notificationUI_container1_title_eu">What’s new</string>
    <string name="notificationUI_container1_body_text_eu">The new privacy features in the Privacy Sandbox let apps show you relevant ads, but restrict what those apps can learn about your activities on websites and apps from other developers.</string>
    <string name="notificationUI_container1_control_text_eu">How it works</string>
    <string name="notificationUI_container2_title_eu">How to participate</string>
    <string name="notificationUI_container2_body_text_eu">Turning on the beta allows apps to test these new, more private ways to show you ads. You can turn off the beta any time in your privacy settings.</string>
    <string name="notificationUI_left_control_button_text_eu">No thanks</string>
    <string name="notificationUI_right_control_button_text_eu">Turn On</string>
    <string name="notificationUI_more_button_text">More</string>
    <string name="notificationUI_confirmation_accept_title">Thank you for participating</string>
    <string name="notificationUI_confirmation_accept_subtitle">You’re part of Android’s ads privacy beta. The Privacy Sandbox is turned on for your device.\n\nYou can learn more or turn off the beta any time in your privacy settings.</string>
    <string name="notificationUI_confirmation_decline_title">You’ve chosen not to participate</string>
    <string name="notificationUI_confirmation_decline_subtitle">Thanks for your response. The Privacy Sandbox is turned off for your device.\n\nIf you change your mind or want to learn more, go to your privacy settings.</string>
    <string name="notificationUI_confirmation_left_control_button_text">Privacy settings</string>
    <string name="notificationUI_confirmation_right_control_button_text">Got it</string>
    <string name="notificationUI_notification_title" translatable="false">@string/notificationUI_header_title_eu</string>
    <string name="notificationUI_notification_content" translatable="false">@string/notificationUI_notification_content_eu</string>
    <string name="notificationUI_you_can_change_in_privacy_settings">You can make changes in privacy settings.</string>
    <string name="notificationUI_fledge_measurement_title">Other ads privacy features now available</string>
    <string name="notificationUI_fledge_measurement_introduction_text1">Android also offers new ways to limit what apps can learn about you when they show you personalized ads.</string>
    <string name="notificationUI_fledge_measurement_introduction_text2">&#8226;&#160;&#160;App-suggested ads help protect your identity and information about your app usage while enabling apps to show you relevant ads. Based on your activity, an app you use can suggest related ads on other apps. You can see a list of apps and block them from making suggestions, in privacy settings.</string>
    <string name="notificationUI_fledge_measurement_introduction_text3">&#8226;&#160;&#160;With ad measurement, limited types of data are shared between apps to measure the performance of their ads, such as the time of day an ad was shown to you.</string>
    <string name="notificationUI_fledge_measurement_control_ga_text_eu">More about app-suggested ads and ad measurement</string>
    <string name="notificationUI_how_it_works_fledge_measurement_expanded_text0">App-suggested ads</string>
    <string name="notificationUI_how_it_works_fledge_measurement_expanded_text1">&#8226;&#160;&#160;What data is used</string>
    <string name="notificationUI_how_it_works_fledge_measurement_expanded_text2">Your activity in an app you use on this device.</string>
    <string name="notificationUI_how_it_works_fledge_measurement_expanded_text3">&#8226;&#160;&#160;How apps use this data</string>
    <string name="notificationUI_how_it_works_fledge_measurement_expanded_text4">Apps can store information with Android about things you like. For example, if you use an app about marathon training, the app might decide that you’re interested in running shoes. Later, if you use a different app, that app can show you an ad for running shoes suggested by the first app.</string>
    <string name="notificationUI_how_it_works_fledge_measurement_expanded_text5">&#8226;&#160;&#160;How you can manage your data</string>
    <string name="notificationUI_how_it_works_fledge_measurement_expanded_text6">Android auto-deletes app-suggested data regularly. An app you use again might reappear on the list. </string>
    <string name="notificationUI_how_it_works_fledge_measurement_expanded_text7">You can also block an app from suggesting ads for you, reset all ad-suggestion data, or turn app-suggested ads off at any time in privacy settings.</string>
    <string name="notificationUI_how_it_works_fledge_measurement_expanded_text8" translatable="false">@string/settingsUI_main_view_info_text8</string>
    <string name="notificationUI_how_it_works_fledge_measurement_expanded_text9">Apps you use can ask Android for information that helps them measure the performance of their ads. Android protects your privacy by limiting the information apps can share with one another.</string>
    <string name="settingsUI_main_view_subtitle">Participate in Android’s ads privacy beta</string>
    <string name="settingsUI_privacy_sandbox_beta_switch_title">Privacy Sandbox</string>
    <string name="settingsUI_topics_title">Interests estimated by Android</string>
    <string name="settingsUI_apps_title">Apps that estimate interests</string>
    <string name="settingsUI_main_view_info_text1" translatable="false">@string/notificationUI_container1_control_text_eu</string>
    <string name="settingsUI_main_view_info_text2" translatable="false">@string/notificationUI_how_it_works_expanded_text1</string>
    <string name="settingsUI_main_view_info_text3" translatable="false">@string/notificationUI_how_it_works_expanded_text2</string>
    <string name="settingsUI_main_view_info_text4" translatable="false">@string/notificationUI_how_it_works_expanded_text3</string>
    <string name="settingsUI_main_view_info_text5" translatable="false">@string/notificationUI_how_it_works_expanded_text4</string>
    <string name="settingsUI_main_view_info_text6" translatable="false">@string/notificationUI_how_it_works_expanded_text5</string>
    <string name="settingsUI_main_view_info_text7" translatable="false">@string/notificationUI_how_it_works_expanded_text6</string>
    <string name="settingsUI_main_view_info_text8">Ad measurement</string>
    <string name="settingsUI_main_view_info_text9">Apps can use the Privacy Sandbox to measure the effectiveness of their ads. To do this, advertisers can temporarily save data with Android about your interactions between their ads and apps.  The amount of data they can save is restricted and will be deleted regularly.\n\nYou can delete this data at any time by turning off the Privacy Sandbox.</string>
    <string name="settingsUI_measurement_switch_title">Allow ad measurement</string>
    <string name="settingsUI_measurement_view_intro_text">Apps and advertisers can request information from Android that helps them measure the performance of their ads.\n\nAd measurement data is deleted regularly from your device.</string>
    <string name="settingsUI_measurement_view_reset_title">Reset measurement data</string>
    <string name="settingsUI_measurement_view_title" translatable="false">@string/settingsUI_main_view_info_text8</string>
    <string name="settingsUI_measurement_view_footer_text">Android protects your privacy by limiting the information apps can share with one another. Reports are sent with a delay to protect your identity.\n\nYour browser may have a similar setting. If ad measurement is on for both Android and your browser, a company may be able to measure the effectiveness of an ad between apps you use and sites you visit. Your browsing history is kept private on your device.\n\nLearn more about how Android protects your data in our <a href="https://policies.google.com/privacy">Privacy Policy</a>.</string>
    <string name="settingsUI_topics_ga_title">Ad topics</string>
    <string name="settingsUI_apps_ga_title">App-suggested ads</string>
    <string name="settingsUI_measurement_ga_title" translatable="false">@string/settingsUI_main_view_info_text8</string>
    <string name="settingsUI_main_view_ad_topics_info">Android notes topics of interest based on the apps you’ve used recently and how frequently you use them.</string>
    <string name="settingsUI_main_view_apps_info">Apps you use can also determine what you like based on how you use them.</string>
    <string name="settingsU_main_view_measurement_info">Apps you use can ask Android for information to help them measure the performance of their ads. Android lets apps collect limited types of data.</string>
    <string name="settingsU_main_view_learn_more">Learn more about <a href="https://support.google.com/android?p=ad_privacy">ad privacy on Android</a></string>
    <string name="ic_main_view_ga_image_description">Colorful illustration of a lock inside a circle</string>
</resources>